<resources>
    <string name="app_name">AWC Inspection</string>
    <string name="app_dasboard">AWC INSPECTION</string>
    <string name="drawer_Name">Name</string>
    <string name="drawer_Desig">Oficer</string>
    <string name="drawer_email">a@gmail.com</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_logout">Sign Out</string>
    <string name="drawer_sales">DASHBOARD</string>
    <string name="drawer_purchase"></string>
    <string name="drawer_accounts">Accounts</string>
    <string name="drawer_hr">HR</string>
    <string name="drawer_group_chart">Group Chart</string>
    <string name="drawer_instructions">Instruction</string>
    <string name="drawer_work_schedule">Work Schedule</string>
    <string name="drawer_rate_this_app">Rate This App</string>
    <string name="drawer_share_with_friend">Share With Friend</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="btnAdd">Add</string>
    <string name="btnRemove">Remove</string>
    <string name="allow">Please allow to fetch contacts</string>
    <string name="title_invites">Invites</string>
    <string name="max_value">0</string>
    <string name="last_isac">\u25BA Last ISAC</string>
    <string name="last_inspaction">\u25BA Last Inspection</string>
    <string name="building_status">\u25BA Building Status</string>
    <string name="building_run_in">\u25BA Building Run In</string>
    <string name="rentend_building_in">\u25BA Rented Building In </string>
    <string name="building_fundname">\u25BA Fund Name</string>
    <string name="building_othergov">\u25BA Other Gov Building</string>
    <string name="building_condition">\u25BA Building Condition </string>
    <string name="building_Comment">\u25BA Comment</string>
    <string name="building_havetoilet">\u25BA Toilet within AWC premises</string>
    <string name="condition">\u25BA Condition</string>
    <string name="Have_Separate_Kitchen_Set">\u25BA Separate Kitchen Set</string>
    <string name="cooking_done">\u25BA Cooking Done Through</string>
    <string name="eletricity_avel">\u25BA Electricity Available</string>
    <string name="mode">\u25BA Mode</string>
    <string name="light">\u25BA Light</string>
    <string name="fan">\u25BA Fan</string>
    <string name="pump">\u25BA Pump For Overhead</string>
    <string name="own_drinking_water">\u25BA Own Drinking Water source</string>
    <string name="givecomment">\u25BA Give comment</string>
    <string name="Adequate_Space">\u25BA Adequate Space for Storage</string>
    <string name="Physically_Checked">\u25BA Physically Checked</string>
    <string name="Compared_with">\u25BA Compared with stock book</string>
    <string name="Stock_sufficient_for_next_15_days">\u25BA Stock sufficient for next 15 days</string>
    <string name="Stock_Sufficiant">\u25BA Stock is lying</string>
    <string name="Rice_Dal">\u25BA Rice quality</string>
    <string name="dalquality">\u25BA Dal quality</string>
    <string name="Specified_brand">\u25BA Specified brand</string>
    <string name="stock_lying">\u25BA Stock is not lying</string>
    <string name="soya_chunk_brnd">\u25BA Mustard Oil</string>
    <string name="salt">\u25BA Salt</string>
    <string name="stock_lyng">\u25BA Stock is lyng</string>
    <string name="utensil_condition">\u25BA Utensil Condition</string>
    <string name="mat_chai">\u25BA Mat / Chatai</string>
    <string name="eleven">\u25BA 11 Registers</string>
    <string name="baby_w_machine">\u25BA Baby W Machine</string>
    <string name="muac_tape">\u25BA Adult weighing machine</string>
    <string name="hight_tape">\u25BA Height Measuring Tape</string>
    <string name="growth_chat">\u25BA Growth Chart</string>
    <string name="Sroting_cont">\u25BA Containers for storing</string>
    <string name="hand_washing_soap">\u25BA Hand Washing Soap</string>
    <string name="block_corner_congnitive">\u25BA Block corner</string>
    <string name="book">\u25BA Book corner</string>
    <string name="block_cornerr">\u25BA Block corner</string>
    <string name="drawing_cornerr">\u25BA Drawing corner</string>
    <string name="play_cornerr">\u25BA Play corner</string>
    <string name="Whether_ecce_running">\u25BA ECCE is running</string>
    <string name="ECCE_activity_at_AWC_found">\u25BA ECCE activity at AWC found</string>
    <string name="Aww_is_using_appopriate_tlm">\u25BA Aww is using appopriate tlm</string>
    <string name="WW_using_ECCE_kit_properly_or_not">\u25BA AWW using ecce kit</string>
    <string name="artworks">\u25BA children\'s artworks</string>
    <string name="Children_individual_activity_record_found">\u25BA Individual activity record found</string>
    <string name="AWC_decoration_is_fit_for_ECCE">\u25BA AWC decoration is fit</string>
    <string name="Name_the_PSE_activity_is_seen">\u25BA AWW is following the routine</string>
    <string name="No_of_Children_present_out_of_total">\u25BA No of children enrolled</string>
    <string name="response_from_children">\u25BA No of children physically found today</string>
    <string name="process">\u25BA Children are activity and participating in ecce proccess</string>
    <string name="assementcard">\u25BA Assessment card is available</string>
    <string name="eccekit">\u25BA Date of last receipt of ecce kit</string>
    <string name="obser">\u25BA Date of last ecce day observed</string>
    <string name="shishu_command">\u25BA Comment</string>
    <string name="sishu_aloy">\u25BA Sishu aloy</string>
    <!--    Shishu aloy no-->
    <string name="pseactivity">\u25BA PSE activity found today</string>
    <string name="childrenenrolled">\u25BA No of children enrolled</string>
    <string name="foundtoday">\u25BA No of children found today</string>
    <string name="pseactivitys">\u25BA Children are active and participating in pse activists</string>
    <string name="assementcardno">\u25BA if assessment card is available</string>
    <!--    Shishu aloy no-->
    <string name="morning_snacks_served">\u25BA Morning Snacks Served</string>
    <string name="Hcm_served_at_the_awc">\u25BA Hcm served at the awc</string>
    <string name="menu_of_morning_snacks">\u25BA Menu of Morning Snacks</string>
    <string name="SNP_Served_at_the_AWC">\u25BA SNP Served at the AWC</string>
    <string name="SNP_Menu_that_Day">\u25BA Hcm menu today</string>
    <string name="No_of_Children_Present_Day">\u25BA No of Children Present Day</string>
    <string name="plamenroll">\u25BA "No. of pm &amp; lm enrolled</string>
    <string name="enrolled">\u25BA No of Children enrolled</string>
    <string name="LM_Present_Day">\u25BA No of PM &amp; LM Present Day</string>
    <string name="last_three_Month">\u25BA Feeding days last three Month</string>
    <string name="Any_feeding_interruption_last_three_month">\u25BA Last three month</string>
    <string name="Reason_why_SNP_not_Served">\u25BA Reason why SNP not Served</string>
    <string name="snpcommand">\u25BA comment</string>
    <string name="Malnurishd_chld">\u25BA Recorder in the register</string>
    <string name="Nutritional_Status_Observed">\u25BA No of children physically found today</string>
    <string name="Duration_of_feeding_interruption">\u25BA Duration of feeding interruption</string>
    <string name="Supervisor">\u25BA Action from AWW &amp; Supervisor</string>
    <string name="Any_Coommunity_Participation_noticed">\u25BA Any Community Participation noticed</string>
    <string name="Visit_of_Supervisor_of_the_AWC">\u25BA Date of last Visit of the Supervisor to the AWC</string>
    <string name="Meeting_organised_regularly">\u25BA Mother\'s Date of last supusti diwas observed</string>
    <string name="Committe_formed_and_meeting_held">\u25BA Last received date</string>
    <string name="Visit_of_other_Functionarics">\u25BA Medicine kit received</string>
    <string name="Maintenance_of_records">\u25BA general clearness of awc and surrounding</string>
    <string name="Charges_received_regulary">\u25BA General Clearness of AWC and surrounding</string>
    <string name="Kit_last_received">\u25BA Medicine Kit last received</string>
    <string name="PreSchool_Kit_last_received">\u25BA Pre-School Kit last received</string>
    <string name="Growth_Chart_last_received">\u25BA Growth Chart last received</string>
    <string name="regarding_AWC">\u25BA Remarks regarding AWC</string>
    <string name="Last_ISAC_Report">\u25BA Last ISAC Report</string>
    <string name="Inspection_Report">\u25BA Last Inspection Report</string>
    <string name="Adequate_space_for_children">\u25BA Last Adequate space for children</string>
    <string name="adequepseId">\u25BA Adequate space for children</string>
    <string name="PSE_Activitics">\u25BA PSE Activitics</string>
    <string name="CommentPSE">\u25BA Comment</string>
    <string name="District_Name">\u25BA District Name</string>
    <string name="Project_Name">\u25BA Project Name</string>
    <string name="Sector_Name">\u25BA Sector Name</string>
    <string name="Center_Name">\u25BA Center Name</string>
    <string name="Cdpo_Name">\u25BA Cdpo Name</string>
    <string name="Cdepo_Phone">\u25BA Cdpo Phone</string>
    <string name="Acdpo_Name">\u25BA Acdpo Name</string>
    <string name="Acdpo_Phone">\u25BA Acdpo Phone</string>
    <string name="Supervisor_Name">\u25BA Supervisor Name</string>
    <string name="Supervisor_Phone">\u25BA Supervisor Phone</string>
    <string name="Worker_Name">\u25BA Worker Name</string>
    <string name="Worker_Phone">\u25BA Worker Phone</string>
    <string name="Helper_Name">\u25BA Helper Name</string>
    <string name="Helper_Phone">\u25BA Helper Phone</string>
    <string name="Inspactor_Name">\u25BA  Name</string>
    <string name="Inspactor_Number">\u25BA   Number</string>
    <string name="Mail_Id">\u25BA  Mail Id </string>
    <string name="Address">\u25BA  Address</string>
    <string name="speech_prompt">Say Name&#8230;</string>
    <string name="speech_number">Say Number&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_command">Say Command&#8230;</string>
    <string name="speech_text">Say Text&#8230;</string>
    <string name="title_activity_capturelogmap">Map</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="error_permission_map">error_permission_map</string>
    <string name="cancel">cancel</string>

    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>

</resources>
